Align photo with text/smaller font size desktop/fixing coming soon box on mobile

--- a/style/sass/_layout.scss
+++ b/style/sass/_layout.scss
@@ -217,6 +217,6 @@ img {
   // coming soon placeholder (for the +/-)
   .coming-soon {
     text-align: right;
-    width: 220px;
+    width: 221px;
   }
 }
