--- a/style/sass/_projects.scss
+++ b/style/sass/_projects.scss
@@ -7,6 +7,7 @@
 
   .image {
     height: 635px;
+    margin-top: 4px;
     margin-bottom: 20px;
     background-image: url('/images/IMG_8375.JPG');
     background-size: cover;
