--- a/style/sass/_typography.scss
+++ b/style/sass/_typography.scss
@@ -8,8 +8,8 @@ body {
   font-size: 21px;
   line-height: 25px;
   .small-type {
-    font-size: 17px;
-    line-height: 21px;
+    font-size: 16px;
+    line-height: 20px;
   }
 
   // type size for tablet
